--- a/index.html
+++ b/index.html
@@ -5,13 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>zsckare</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     
+    <section id="home">
+        <div class="layer">
+
+                <div class="profile text-center">
+                    <img src="img/profile.jpg" class="img-circle " alt="">
+                </div>
+                <div class="greeting">Hi there!</div>
+                <div id="write" class="text-center "></div>
+
+                <ul class="links">
+                    <li>
+                        <a href=""><i class="fab fa-twitter"></i></a>
+                    </li>
+                    <li>
+                        <a href="">
+                                <i class="fab fa-github"></i>
+                        </a>
+                    </li>
+                    <li>
+                            <a href="">
+                                    <i class="fab fa-bitbucket"></i>
+                                </a>
+                    </li>
+                </ul>
+               
+        </div>
+    </section>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/writter.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
