--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             
         
         <section class="section" data-anchor="page2">
-            mlm
+            en construccion
         </section>
     </div>
 
